<resources>
    <string name="app_name">Books</string>
    <string name="pages">Pages \: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connection_error">Connection error!</string>
    <string name="watch_review">Watch review</string>
    <string name="invalid_video">Not a valid video!</string>
    <string name="detail_load_error">Detail load error: %1$s</string>
    <string name="no_video_found">No video found</string>
    <string name="app_tittle">Books</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Don\'t have an account? Sign up</string>
    <string name="sign_up_btn">Sign up</string>
    <string name="email_required">Email is required</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="password_required">Password is required</string>
    <string name="invalid_long_password">Password must be at least 6 characters</string>
    <string name="error_invalid_email">Invalid email format</string>
    <string name="error_wrong_password">Invalid password</string>
    <string name="error_account_exists_with_different_credential">An account already exists with the same email but different sign-in credentials</string>
    <string name="error_email_already_in_use">This email is already in use by another account</string>
    <string name="error_user_token_expired">Session has expired. Please log in again</string>
    <string name="error_user_not_found">User not found with the provided information</string>
    <string name="error_weak_password">The password provided is too weak</string>
    <string name="error_password_length">Password must be at least 6 characters</string>
    <string name="error_no_network">No network or connection was interrupted</string>
    <string name="error_authentication_failed">Authentication failed</string>
    <string name="login_successful">Login successful!</string>
    <string name="email_already_registered">Email already registered</string>
    <string name="unknown_error">Unknown error</string>
    <string name="verification_email_sent">Verification email has been sent</string>
    <string name="verification_email_not_sent">We couldn’t send the verification email. Please try again later.</string>
    <string name="user_created">User created successfully!</string>
    <string name="reset_password">Reset password</string>
    <string name="cancel">Cancel</string>
    <string name="write_email">Enter your email to receive the password reset link.</string>
    <string name="link_sent">The password reset link has been sent.</string>
    <string name="link_not_sent">Failed to send the reset link. Please try again later.</string>
    <string name="send">Send</string>
    <string name="log_out">Log out</string>
    <string name="email_not_verified">Please verify your email to continue</string>
    <string name="verification_email_failed">Failed to send verification email</string>
    <string name="resend_verification_email">Resend verification email</string>
    <string name="success_logout">Logged out successfully</string>
    <string name="close">Close</string>
    <string name="author_city">Would you like to see where the author was born?</string>
    <string name="author_city_btn">Show location</string>
    <string name="iclocation">icLocation</string>
    <string name="location_not_available">Location not available</string>
    <string name="unknown_location">Unknown location</string>


</resources>